<resources>
    <string name="app_name">ProyectoB</string>
    <string name="user_txt_login">User</string>
    <string name="password_txt_login">password</string>
    <string name="log_in_btn_login">Log in</string>
    <string name="sign_in_btn_login">Sign in</string>
    <string name="name_txt_signinactivity">Name</string>
    <string name="email_txt_signinactivity">Email</string>
    <string name="save_btn_siginactivity">Save</string>

    <string-array name="arrSexo">
        <item>Hombre</item>
        <item>Mujer</item>
        <item>No Binario</item>
    </string-array>
</resources>